简单美化了一下登录注册页、修复了几个bug（之前忘提交）